# lab

./: .gitignore  README.md  ai_answers.txt  ai_questions.txt  ansi1  devbox.json  groups  inference_speed.txt  output.rs  package.json  pnpm-lock.yaml  project.config  render.yaml  sliding_tile_game.html  sliding_tile_game.js
.devcontainer/: Dockerfile  devcontainer.json
95/: index.html
adven/: Cargo.toml  README.md  ssh_host_key  ssh_host_key.pub
adven/src/: main.rs  ssh_server.rs  terminal.rs
adven/src/game/: commands.rs  content.rs  mod.rs  player.rs  world.rs
adven/src/ssh/: mod.rs
adven/src/ssh_server/: mod.rs
bb/: index.html
blend/: .gitattributes  create_skull.py  skull.blend  skull.blend1
blu/: index.ts
bruh/: game.js  index.html  style.css
bunny/: index.html  script.js  style.css  worker.js
c7/: index.html
cal/: package.json
canvas-game/: game.js  index.html  style.css
clau/: README.md  app.js  app.test.js  fake-shell.js
cli/: Cargo.toml  README.md  devbox.json
cms/: Cargo.toml  Dioxus.toml  cms_data.db  package.json  tailwind.config.js
cms/assets/: custom.css  index.html  main.css  tailwind.css
cms/src/: main.rs  routes.rs
cms/src/components/: layout.rs  mod.rs  post_card.rs  post_form.rs  post_form_wasm.rs  stats_card.rs
cms/src/components/post_form/: wasm.rs
cms/src/db/: mod.rs  post_repository.rs
cms/src/models/: mod.rs  post.rs  user.rs
cms/src/pages/: blog.rs  blog_post.rs  dashboard.rs  edit_post.rs  mod.rs  new_post.rs  not_found.rs  post_detail.rs  posts.rs  users.rs
cms/src/utils/: mod.rs  panic_hook.rs  quill_editor.rs  server_functions.rs  time.rs
con/: README.md  index.html  script.ts  styles.css
context/: pyproject.toml
context/src/context/: __init__.py  server.py
cute/: index.html  package-lock.json  package.json  tsconfig.json
dai/: deno.json  devbox.json  package.json
dec/: a.res  a.ts
diox/: Cargo.toml  Dioxus.toml  sqlite.db
diox/migration/: Cargo.toml
diox/migration/src/: m20220101_000001_create_table.rs
diox/src/: main.rs
feng/: README.md  convert.html  grammar.lua  index.html  orgmode_grammar.lua  orgmode_lpeg.lua  output.html  test.org
fib/: main.go
fileman/: flake.nix  package.json
flict/: .env.json  bootstrap.sh  main.go  me  mise.toml  package.json  pnpm-lock.yaml
flight/: index.html  index.js  package.json
flop/: Cargo.toml
gem/: game.ts  index.html  package.json
glim/: README.md  gleam.toml  manifest.toml
honox/: deno.json  package.json  vite.config.ts  wrangler.jsonc
hub/: flake.nix
jarz/: package.json  pnpm-lock.yaml
jaz/: package.json
jazzy/: index.ts  package.json  pnpm-lock.yaml
jetzig/: build.zig  build.zig.zon
learnu/: hello  hello.hi  hello.hs
lop/: Cargo.toml  README.md  index.js
lppy/: Cargo.toml  bundle.js  bundled.css  index.html  lib.js  package.json
lynx/: lynx.config.ts  package.json
mandelbrot-game-of-life/: game.js  index.html
nexty/: package.json
nimmy/: client  client.js  client.nim  index.ts
nitro-app/: nitro.config.ts  package-lock.json
nixy/: flake.nix
nu/: at.nu  foo.nu  test.nu
nuck/: app.vue
ody/: main  main.odin  ody
ot/: index.ts
paint/: package.json
pizza/: index.html  index.js  style.css
planner/: .env  index.html  main.ts  package.json  style.css  vite.config.mjs
planx/: .env  .gitignore  deno.json  drizzle.config.ts  package.json  svelte.config.js  vite.config.ts
plat/: index.html  main.ts  package.json  three-extensions.d.ts
porf/: a.out  index  index.c  index.ts  index.wasm  main  package.json
qc/: .mcp.json  package.json
qua/: index.html  package.json  style.css
rules/: index.html  (+1 more)
slink/: Cargo.toml  index.html  index.ts  main.slint  package.json
slink/src/: http.rs  main.rs
slink/ui/: main.slint
(+376 files in other folders)
