[package]
name = "cms"
version = "0.1.0"
authors = ["nandi <78769380+codegod100@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.18"
chrono = { version = "0.4.31", features = ["wasmbind"] }
tokio = { version = "1.35.1", features = ["time"] }

# Database dependencies - only for native builds
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.30.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.23.0"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Window", "Node", "NodeList"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
