[project]
name = "context"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.12",
    "mcp>=1.2.1",
]


[project.scripts]
server = "context:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
