[package]
name = "diox"
version = "0.1.0"
authors = ["nandi <78769380+codegod100@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
futures = "0.3.31"
once_cell = "1.20.3"
rusqlite = { version = "0.33.0", optional = true }


[features]
default = ["web", "server"]
web = ["dioxus/web"]
server = ["dioxus/server", "dep:rusqlite"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
