[package]
name = "slink"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.10.0"
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2.2", features = ["js"] }
web-sys = { version = "0.3", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window", "console"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"

[build-dependencies]
slint-build = "1.10.0"


[lib]
path = "src/main.rs"
crate-type = ["cdylib"]